creating order microservice, order microservice reading all orders on startup.